[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axis-runtime"
version = "0.1.0"
description = "A small educational container runtime with an Axisfile CLI."
requires-python = ">=3.11"

[project.scripts]
axis = "axis.cli:main"

[tool.setuptools.packages.find]
include = ["axis*"]
